--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -16,13 +16,16 @@
     "@rainbow-me/rainbowkit": "^2.2.0",
     "@tanstack/react-query": "^5.59.16",
     "@wagmi/connectors": "5.3.3",
+    "canvas": "^3.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "encoding": "^0.1.13",
     "eslint-config-next": "^15.0.2",
     "ethers": "^6.13.4",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.454.0",
     "next": "^15.3.3",
+    "nft.storage": "^7.2.0",
     "pino-pretty": "^11.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
