--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,20 @@
 {
   "rewrites": [{ "source": "/(.*)", "destination": "/packages/react-app/$1" }],
   "buildCommand": "cd packages/react-app && npm install && npm run build",
-  "outputDirectory": "packages/react-app/.next"
+  "outputDirectory": "packages/react-app/.next",
+  "headers": [
+    {
+      "source": "/.well-known/farcaster.json",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/json"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600"
+        }
+      ]
+    }
+  ]
 }
